# Kiwoom-Bank

./: .gitignore  CSVREAD.ipynb  README.md  README.txt  crawling.py  crawling3.py  dart.py  debug_check.py  grade_crawling_final.py  index.html  metrics_result.csv  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  stock.xlsx  test_metrics.py  train_xgb_credit.py  vite.config.ts  재무제표 전처리.ipynb
.smoke_cache/: 005930_45964664b0c624401e8223f1f80e5d328ee87f3c.pkl
AI/: 1.4.0  1.51.0  analyze.py  naver_news.py  preprocess.py  sentiment_finbert.py  utils_scoring.py
FASTAPI/: analyze_colab_fast.py  main.py  server.py  stock.xlsx  stock_augmented.xlsx  train_with_news.py  xgb_credit_model.pkl  xgb_feature_columns.pkl
FRONT-END/: package-lock.json  package.json
FRONT-END-FINAL-REAL/: README.md  package-lock.json  package.json  vite.config.ts
FRONT-END-REVISED/: README.md  index.html  package-lock.json  package.json
api/: app.py  credit_model.py  features.py
artifacts/: aliases_auto_added_preview.json  aliases_review_queue.csv  failed_codes.csv  metrics_integrity_report.csv  missing_aliases_candidates.csv  skipped_codes.csv
backend/: main.py  model.py
comp_features/: LG전자_20251027_204841.csv  LG전자_20251028_092054.csv  NAVER_20251027_182516.csv  SK하이닉스_20251027_205341.csv  SK하이닉스_20251027_210011.csv  SK하이닉스_20251028_104402.csv  삼성전자_20251027_215959.csv  삼성전자_20251028_105359.csv  송원산업_20251027_220132.csv  키움증권_20251027_194639.csv  키움증권_20251027_195217.csv  파라다이스_20251027_210349.csv  현대자동차_20251027_193250.csv  현대자동차_20251027_203914.csv  현대자동차_20251028_111350.csv
crawlers/: crawling_cash_final.py  grade_crawling_by_search.py  grade_crawling_by_search2.py  grade_crawling_by_search_parallel.py  grade_crawling_by_search_parallel_retry.py  grade_crawling_by_search_parallel_retry_final.py  grade_crawling_cash.py  grade_crawling_final.py
credit_rating_project/: README.md  predict_single.py  requirements.txt  show_tree.py
examples/: run_batch.py
frontend/: package-lock.json  package.json  show_tree.py
kiwoom_finance/: batch.py  (+2 more)
(+704 files in other folders)
